else if --> switch